<resources>
    <string name="app_name">Sheet Music Tutor</string>
    <string name="start">Start</string>
    <string name="options">Options</string>
    <string name="quiz">Quiz</string>
    <string name="user">User Menu</string>
    <string name="c">CS</string>
    <string name="app_title">Sheet Music Tutor</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="difficulty_select">Select Your Starting Difficulty!</string>
    <string name="achievements">Users Achievements</string>
    <string name="achievement">Achievements</string>
    <string name="baby_steps">Baby Steps 0/1</string>
    <string name="finding_balance">Finding Balance 0/4</string>
    <string name="rookie_no_more">Rookie No More 0/8</string>
    <string name="hard_rocker">Hard Rocker 0/16</string>
    <string name="blind_ninja">Blind Ninja 0/8</string>
    <string name="note_meister">Note-Meister 0/5</string>
    <string name="guess_note">Guess the Note!</string>
    <string name="score">Score: 0</string>
    <string name="question_mark">\?</string>
    <string name="three_tries">Tries 0/3</string>
    <string name="guess_the_note">Identify The Note: A</string>
    <string name="know_keyboard">Know</string>
    <string name="select_song">Choose a Song to Play!</string>
    <string name="little_star">Twinkle Twinkle Little Star</string>
    <string name="done">Done</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="enter_a_name_to_add">Your name goes here</string>
    <string name="stats">Stats</string>
    <string name="try_studying_more">Try Studying More!</string>
    <string name="quiz_results">Quiz Results</string>
    <string name="score_70">Score: 70%</string>
    <string name="title_activity_note_defense">NoteDefense</string>
    <string name="staff_mode">Staff Mode</string>
    <string name="quiz_mode">Quiz Mode</string>
    <string name="play_along_mode">Play Along Mode</string>
    <string name="note_defense_mode">Note Defense Mode</string>
    <string name="note_hero_mode">Note Hero Mode</string>
    <string name="know_your_note_mode">Know Your Note Mode</string>
</resources>
