<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:orientation="vertical"
    tools:context="vanwingerdenbarrier.sheetmusictutor.MainActivity"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.2">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sheetlogo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".9"
        android:weightSum="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="2"
            android:orientation="vertical">
            <Button
                android:id="@+id/StartButton"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:onClick="startButton"
                android:text="@string/start"
                android:layout_marginHorizontal="25dp"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/StatsButton"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="statsButton"
                android:text="@string/stats"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="25dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:weightSum="2"
            android:orientation="vertical">
            <Button
                android:id="@+id/OptionsButton"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="optionsButton"
                android:text="@string/options"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="25dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/AchievementsButton"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="userAchievements"
                android:text="@string/achievement"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="25dp"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>



</LinearLayout>
