<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/smtbackground"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:weightSum="10"
    tools:context="vanwingerdenbarrier.sheetmusictutor.Achievements.ResultsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="3"
        android:weightSum="10"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linlay"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="5"
            android:orientation="vertical"
            android:weightSum="10">

            <TextView
                android:id="@+id/title"
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:gravity="center"
                android:text="@string/quiz_results"
                android:textColor="@color/platinum"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quote"
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/try_studying_more"
                android:textColor="@color/platinum"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/correct"
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="Correct: 4/5"
                android:textColor="@color/platinum"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/points"
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="Points: 6/10"
                android:textColor="@color/platinum"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/percent"
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/score_70"
                android:textColor="@color/platinum"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/platinum">

            <ListView
                android:id="@+id/AcheivementList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></ListView>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:weightSum="10"
        android:orientation="horizontal">



        <Button
            android:layout_marginTop="25dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:onClick="doneButton"
            style="@style/button_style"
            android:layout_marginHorizontal="100dp"
            />
    </LinearLayout>


</LinearLayout>